# sondbus

./: Cargo.toml  README.md  cspell.json
.github/worflows/: build_spec_pdf.yaml
.github/workflows/: build_spec_pdf.yaml
.zed/: settings.json
conformance/: Cargo.toml
conformance/src/: main.rs
spec/: 04-Transport-Layer.md  About.typ  Architecture.typ  Data-Link-Layer.typ  Sondbus.md  Sondbus.typ  Transfer-Layer.typ
src/: command.rs  crc8.rs  frameaction.rs  frametype.rs  frametypes.rs  lib.rs  master.rs  ringbuf.rs  slave.rs
src/frameaction/: unframed_response.rs
src/frametype/: cyclic_request.rs
src/master/: blocking.rs  transport.rs
src/master/transport/: serial.rs
src/slave/: callbacks.rs  core.rs  frame.rs  handle.rs  request.rs  response.rs  slavestate.rs  state.rs  transceiver.rs
src/slave/frame/: core.rs  rx.rs  sdo.rs  state.rs  tx.rs
src/slave/frame/handler/: array.rs  h_00_ping.rs  h_00_sync.rs  h_01_ping.rs  structure.rs
src/slave/frame/response/: array.rs  r_01_ping.rs  structure.rs
src/slave/frame/rx/: rx_00_sync.rs  rx_01_ping.rs  rx_10_sdo_read.rs  rx_11_sdo_response.rs  rx_1f_sdo_abort.rs  rx_struct.rs
src/slave/frame/tx/: tx_01_ping.rs  tx_11_sdo_response.rs  tx_1f_sdo_abort.rs  tx_array.rs  tx_struct.rs
src/slave/state/: frame_ping.rs  wait_for_address.rs  wait_for_crc.rs  wait_for_data.rs  wait_for_length.rs  wait_for_start.rs  wait_for_type.rs
src/slave/tests/: common.rs
src/slave/tests/commands/: bwr.rs  lrd.rs  lwr.rs
src/slave/transceiver/: command.rs  state.rs  test.rs
src/slave/transceiver/command/: memory.rs
(+17 files in other folders)
